2. Made hero section

--- a/app/index.html
+++ b/app/index.html
@@ -103,24 +103,99 @@
       <nav class="mobileMenu">
         <ul class="mobileMenu__list">
           <li class="mobileMenu__item">
-            <a class="mobileMenu__link mobileMenu__link--text" href="#">Подбор персонала</a>
+            <a class="mobileMenu__link mobileMenu__link--text" href="#"
+              >Подбор персонала</a
+            >
           </li>
           <li class="mobileMenu__item">
-            <a class="mobileMenu__link mobileMenu__link--text" href="#">Вывод в штат</a>
+            <a class="mobileMenu__link mobileMenu__link--text" href="#"
+              >Вывод в штат</a
+            >
           </li>
           <li class="mobileMenu__item">
-            <a class="mobileMenu__link" href="tel:78124994534">+7 (812) 499-45-34</a>
+            <a class="mobileMenu__link" href="tel:78124994534"
+              >+7 (812) 499-45-34</a
+            >
           </li>
           <li class="mobileMenu__item">
-            <a class="mobileMenu__link" href="tel:78124994534">+7 (812) 499-45-34</a>
+            <a class="mobileMenu__link" href="tel:78124994534"
+              >+7 (812) 499-45-34</a
+            >
           </li>
           <li class="mobileMenu__item">
-            <a class="mobileMenu__link" href="mailto:info@sodst.ru">info@sodst.ru</a>
+            <a class="mobileMenu__link" href="mailto:info@sodst.ru"
+              >info@sodst.ru</a
+            >
           </li>
         </ul>
       </nav>
-
     </header>
+    <!-- /header.header -->
+
+    <main class="main">
+      <section class="hero">
+        <!-- <img class="hero__bgImage" src="./images/main/hero/hero-bg.png" alt="backround"> -->
+        <div class="container">
+          <div class="hero__inner">
+            <div class="hero__box">
+              <div class="hero__textbox">
+                <p class="hero__subtitle">
+                  Вывод персонала за штат 6 минут на сотрудника
+                </p>
+                <h1 class="hero__title">
+                  <span>Аутсорсинг и аутстаффинг</span> миграционных и кадровых
+                  услуг
+                </h1>
+                <p class="hero__text">
+                  Профессиональные кадровые и миграционные услуги для
+                  юридических лиц
+                </p>
+                <button class="hero__btn">Оставить заявку</button>
+              </div>
+              <!-- /hero__textbox -->
+              <img
+                class="hero__img"
+                src="./images/main/hero/hero-img.png"
+                alt="person"
+              />
+            </div>
+            <!-- /hero__box -->
+            <ul class="hero__socials">
+              <li class="hero__socialsItem">
+                <a class="hero__socialsLink" href="#">
+                  <img
+                    class="hero__socialsIcon"
+                    src="./images/main/hero/vk.svg"
+                    alt="vk"
+                  />
+                </a>
+              </li>
+              <li class="hero__socialsItem">
+                <a class="hero__socialsLink" href="#">
+                  <img
+                    class="hero__socialsIcon"
+                    src="./images/main/hero/tg.svg"
+                    alt="telegram"
+                  />
+                </a>
+              </li>
+              <li class="hero__socialsItem">
+                <a class="hero__socialsLink" href="#">
+                  <img
+                    class="hero__socialsIcon"
+                    src="./images/main/hero/whatsapp.svg"
+                    alt="whatsapp"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- hero__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.hero -->
+    </main>
     <script src="js/main.min.js"></script>
   </body>
 </html>
