4. Made forums section

--- a/app/index.html
+++ b/app/index.html
@@ -99,36 +99,6 @@
         <!-- /header__inner -->
       </div>
       <!-- /container -->
-
-      <nav class="mobileMenu">
-        <ul class="mobileMenu__list">
-          <li class="mobileMenu__item">
-            <a class="mobileMenu__link mobileMenu__link--text" href="#"
-              >Подбор персонала</a
-            >
-          </li>
-          <li class="mobileMenu__item">
-            <a class="mobileMenu__link mobileMenu__link--text" href="#"
-              >Вывод в штат</a
-            >
-          </li>
-          <li class="mobileMenu__item">
-            <a class="mobileMenu__link" href="tel:78124994534"
-              >+7 (812) 499-45-34</a
-            >
-          </li>
-          <li class="mobileMenu__item">
-            <a class="mobileMenu__link" href="tel:78124994534"
-              >+7 (812) 499-45-34</a
-            >
-          </li>
-          <li class="mobileMenu__item">
-            <a class="mobileMenu__link" href="mailto:info@sodst.ru"
-              >info@sodst.ru</a
-            >
-          </li>
-        </ul>
-      </nav>
     </header>
     <!-- /header.header -->
 
@@ -397,7 +367,76 @@
         <!-- /container -->
       </section>
       <!-- /section.services -->
+
+      <section class="forums">
+        <div class="container">
+          <div class="forums__inner">
+            <h2 class="forums__title">
+              Участвуем в крупных форумах и выставках
+            </h2>
+            <div class="forums__slider">
+              <div class="forums__slide">
+                <img class="forums__slideimage" src="./images/main/forums/1.png" alt="forum" />
+                <div class="forums__slidetextbox">
+                  <p class="forums__slidetext">Название форума</p>
+                  <p class="forums__slidedate">20.02.22</p>
+                </div>
+                <a class="forums__slidelink" href="#">
+                  Перейти
+                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                </a>
+              </div>
+              <div class="forums__slide">
+                <img class="forums__slideimage" src="./images/main/forums/2.png" alt="forum" />
+                <div class="forums__slidetextbox">
+                  <p class="forums__slidetext">Название форума</p>
+                  <p class="forums__slidedate">20.02.22</p>
+                </div>
+                <a class="forums__slidelink" href="#">
+                  Перейти
+                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                </a>
+              </div>
+              <div class="forums__slide">
+                <img class="forums__slideimage" src="./images/main/forums/3.png" alt="forum" />
+                <div class="forums__slidetextbox">
+                  <p class="forums__slidetext">Название форума</p>
+                  <p class="forums__slidedate">20.02.22</p>
+                </div>
+                <a class="forums__slidelink" href="#">
+                  Перейти
+                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                </a>
+              </div>
+              <div class="forums__slide">
+                <img class="forums__slideimage" src="./images/main/forums/3.png" alt="forum" />
+                <div class="forums__slidetextbox">
+                  <p class="forums__slidetext">Название форума</p>
+                  <p class="forums__slidedate">20.02.22</p>
+                </div>
+                <a class="forums__slidelink" href="#">
+                  Перейти
+                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                </a>
+              </div>
+            </div>
+            <!-- /forums__slider -->
+            <div class="forums__buttons">
+              <button class="forums__button forums__button--left">
+                <img src="./images/main/forums/left.svg" alt="left">
+              </button>
+              <button class="forums__button forums__button--right">
+                <img src="./images/main/forums/right.svg" alt="right">
+              </button>
+            </div>
+          </div>
+          <!-- /forums__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.forums -->
     </main>
+
     <script src="js/main.min.js"></script>
   </body>
 </html>
