5. Made competitions section

--- a/app/index.html
+++ b/app/index.html
@@ -376,57 +376,89 @@
             </h2>
             <div class="forums__slider">
               <div class="forums__slide">
-                <img class="forums__slideimage" src="./images/main/forums/1.png" alt="forum" />
+                <img
+                  class="forums__slideimage"
+                  src="./images/main/forums/1.png"
+                  alt="forum"
+                />
                 <div class="forums__slidetextbox">
                   <p class="forums__slidetext">Название форума</p>
                   <p class="forums__slidedate">20.02.22</p>
                 </div>
                 <a class="forums__slidelink" href="#">
                   Перейти
-                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                  <img
+                    class="forums__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
                 </a>
               </div>
               <div class="forums__slide">
-                <img class="forums__slideimage" src="./images/main/forums/2.png" alt="forum" />
+                <img
+                  class="forums__slideimage"
+                  src="./images/main/forums/2.png"
+                  alt="forum"
+                />
                 <div class="forums__slidetextbox">
                   <p class="forums__slidetext">Название форума</p>
                   <p class="forums__slidedate">20.02.22</p>
                 </div>
                 <a class="forums__slidelink" href="#">
                   Перейти
-                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                  <img
+                    class="forums__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
                 </a>
               </div>
               <div class="forums__slide">
-                <img class="forums__slideimage" src="./images/main/forums/3.png" alt="forum" />
+                <img
+                  class="forums__slideimage"
+                  src="./images/main/forums/3.png"
+                  alt="forum"
+                />
                 <div class="forums__slidetextbox">
                   <p class="forums__slidetext">Название форума</p>
                   <p class="forums__slidedate">20.02.22</p>
                 </div>
                 <a class="forums__slidelink" href="#">
                   Перейти
-                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                  <img
+                    class="forums__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
                 </a>
               </div>
               <div class="forums__slide">
-                <img class="forums__slideimage" src="./images/main/forums/3.png" alt="forum" />
+                <img
+                  class="forums__slideimage"
+                  src="./images/main/forums/3.png"
+                  alt="forum"
+                />
                 <div class="forums__slidetextbox">
                   <p class="forums__slidetext">Название форума</p>
                   <p class="forums__slidedate">20.02.22</p>
                 </div>
                 <a class="forums__slidelink" href="#">
                   Перейти
-                  <img class="forums__slideicon" src="./images/main/services/arrow-right.svg" alt="arrow-right" />
+                  <img
+                    class="forums__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
                 </a>
               </div>
             </div>
             <!-- /forums__slider -->
             <div class="forums__buttons">
               <button class="forums__button forums__button--left">
-                <img src="./images/main/forums/left.svg" alt="left">
+                <img src="./images/main/forums/left.svg" alt="left" />
               </button>
               <button class="forums__button forums__button--right">
-                <img src="./images/main/forums/right.svg" alt="right">
+                <img src="./images/main/forums/right.svg" alt="right" />
               </button>
             </div>
           </div>
@@ -435,6 +467,108 @@
         <!-- /container -->
       </section>
       <!-- /section.forums -->
+
+      <section class="competitions">
+        <div class="container">
+          <div class="competitions__inner">
+            <h2 class="competitions__title">Участие в конкурсах</h2>
+            <p class="competitions__subtitle">
+              Сотрудники компании регулярно становятся победителями конкурсов в
+              своих проф. областях
+            </p>
+            <div class="competitions__slider">
+              <div class="competitions__slide">
+                <img
+                  class="competitions__slideimage"
+                  src="./images/main/competitions/1.png"
+                  alt="competition"
+                />
+                <div class="competitions__slidetextbox">
+                  <p class="competitions__slidetext">Название форума</p>
+                  <p class="competitions__slidedate">20.02.22</p>
+                </div>
+                <a class="competitions__slidelink" href="#">
+                  Перейти
+                  <img
+                    class="competitions__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
+                </a>
+              </div>
+              <div class="competitions__slide">
+                <img
+                  class="competitions__slideimage"
+                  src="./images/main/competitions/2.png"
+                  alt="competition"
+                />
+                <div class="competitions__slidetextbox">
+                  <p class="competitions__slidetext">Название форума</p>
+                  <p class="competitions__slidedate">20.02.22</p>
+                </div>
+                <a class="competitions__slidelink" href="#">
+                  Перейти
+                  <img
+                    class="competitions__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
+                </a>
+              </div>
+              <div class="competitions__slide">
+                <img
+                  class="competitions__slideimage"
+                  src="./images/main/competitions/3.png"
+                  alt="competition"
+                />
+                <div class="competitions__slidetextbox">
+                  <p class="competitions__slidetext">Название форума</p>
+                  <p class="competitions__slidedate">20.02.22</p>
+                </div>
+                <a class="competitions__slidelink" href="#">
+                  Перейти
+                  <img
+                    class="competitions__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
+                </a>
+              </div>
+              <div class="competitions__slide">
+                <img
+                  class="competitions__slideimage"
+                  src="./images/main/competitions/2.png"
+                  alt="competition"
+                />
+                <div class="competitions__slidetextbox">
+                  <p class="competitions__slidetext">Название форума</p>
+                  <p class="competitions__slidedate">20.02.22</p>
+                </div>
+                <a class="competitions__slidelink" href="#">
+                  Перейти
+                  <img
+                    class="competitions__slideicon"
+                    src="./images/main/services/arrow-right.svg"
+                    alt="arrow-right"
+                  />
+                </a>
+              </div>
+            </div>
+            <!-- /competitions__slider -->
+            <div class="competitions__buttons">
+              <button class="competitions__button competitions__button--left">
+                <img src="./images/main/forums/left.svg" alt="left" />
+              </button>
+              <button class="competitions__button competitions__button--right">
+                <img src="./images/main/forums/right.svg" alt="right" />
+              </button>
+            </div>
+          </div>
+          <!-- /competitions__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.competitions -->
     </main>
 
     <script src="js/main.min.js"></script>
