6. Made policy section with popup

--- a/app/index.html
+++ b/app/index.html
@@ -569,6 +569,47 @@
         <!-- /container -->
       </section>
       <!-- /section.competitions -->
+
+      <section class="policy">
+        <img class="policy__decoration policy__decoration--1" src="./images/main/policy/decoration-1.svg" alt="decoration">
+        <img class="policy__decoration policy__decoration--2" src="./images/main/policy/decoration-2.svg" alt="decoration">
+        <div class="container">
+          <div class="policy__inner">
+            <h2 class="policy__title">Жёсткая кадровая политика компании</h2>
+            <div class="policy__box">
+              <div class="policy__textbox">
+                <p class="policy__text policy__text--big">
+                  Мы подбираем сотрудников исключительно основываясь на прошлом
+                  опыте, но даже это не позволяет моментально начать работу с
+                  нашими клиентами.
+                </p>
+                <button class="policy__btn">Получить консультацию</button>
+              </div>
+              <!-- /policy__textbox -->
+              <img
+                class="policy__img"
+                src="./images/main/policy/interview.png"
+                alt="interview"
+              />
+            </div>
+            <!-- /policy__box -->
+            <p class="policy__text policy__text--small">
+              При подборе миграционных специалистов и юристов, каждый сотрудник
+              проходит 3-х месячную переквалификацию и только на 2-й месяц
+              работы допускается к первому взаимодействию с клиентом
+            </p>
+            <div class="policy__popup">
+              <a class="policy__popuplink" href="http://www.youtube.com/watch?v=0O2aH4XLbto">
+                <img class="policy__popupimg" src="./images/main/policy/play.svg" alt="play">
+              </a>
+            </div>
+            <!-- /policy__popup -->
+          </div>
+          <!-- /policy__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.policy -->
     </main>
 
     <script src="js/main.min.js"></script>
