7. Made friends section

--- a/app/index.html
+++ b/app/index.html
@@ -610,6 +610,74 @@
         <!-- /container -->
       </section>
       <!-- /section.policy -->
+
+      <section class="friends">
+        <div class="container">
+          <div class="friends__inner">
+            <h2 class="friends__title">Мы дружим с :</h2>
+            <div class="friends__items">
+              <div class="friends__item">
+                <a class="friends__link" href="#">
+                  <img class="friends__img" src="./images/main/friends/1.png" alt="logo">
+                </a>
+              </div>
+              <div class="friends__items--inner-1">
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/2.png" alt="logo">
+                  </a>
+                </div>
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/3.png" alt="logo">
+                  </a>
+                </div>
+              </div>
+              <!-- /friends__items--inner-1 -->
+              <div class="friends__items--inner-2">
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/4.png" alt="logo">
+                  </a>
+                </div>
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/5.png" alt="logo">
+                  </a>
+                </div>
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/6.png" alt="logo">
+                  </a>
+                </div>
+              </div>
+              <!-- /friends__items--inner-2 -->
+              <div class="friends__items--inner-1">
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/7.png" alt="logo">
+                  </a>
+                </div>
+                <div class="friends__item">
+                  <a class="friends__link" href="#">
+                    <img class="friends__img" src="./images/main/friends/8.png" alt="logo">
+                  </a>
+                </div>
+              </div>
+              <!-- /friends__items--inner-1 -->
+              <div class="friends__item">
+                <a class="friends__link" href="#">
+                  <img class="friends__img" src="./images/main/friends/9.png" alt="logo">
+                </a>
+              </div>
+            </div>
+            <!-- /friends__items -->
+          </div>
+          <!-- /friends__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.friends -->
     </main>
 
     <script src="js/main.min.js"></script>
