8. Made reviews section

--- a/app/index.html
+++ b/app/index.html
@@ -571,8 +571,16 @@
       <!-- /section.competitions -->
 
       <section class="policy">
-        <img class="policy__decoration policy__decoration--1" src="./images/main/policy/decoration-1.svg" alt="decoration">
-        <img class="policy__decoration policy__decoration--2" src="./images/main/policy/decoration-2.svg" alt="decoration">
+        <img
+          class="policy__decoration policy__decoration--1"
+          src="./images/main/policy/decoration-1.svg"
+          alt="decoration"
+        />
+        <img
+          class="policy__decoration policy__decoration--2"
+          src="./images/main/policy/decoration-2.svg"
+          alt="decoration"
+        />
         <div class="container">
           <div class="policy__inner">
             <h2 class="policy__title">Жёсткая кадровая политика компании</h2>
@@ -599,8 +607,15 @@
               работы допускается к первому взаимодействию с клиентом
             </p>
             <div class="policy__popup">
-              <a class="policy__popuplink" href="http://www.youtube.com/watch?v=0O2aH4XLbto">
-                <img class="policy__popupimg" src="./images/main/policy/play.svg" alt="play">
+              <a
+                class="policy__popuplink"
+                href="http://www.youtube.com/watch?v=0O2aH4XLbto"
+              >
+                <img
+                  class="policy__popupimg"
+                  src="./images/main/policy/play.svg"
+                  alt="play"
+                />
               </a>
             </div>
             <!-- /policy__popup -->
@@ -618,18 +633,30 @@
             <div class="friends__items">
               <div class="friends__item">
                 <a class="friends__link" href="#">
-                  <img class="friends__img" src="./images/main/friends/1.png" alt="logo">
+                  <img
+                    class="friends__img"
+                    src="./images/main/friends/1.png"
+                    alt="logo"
+                  />
                 </a>
               </div>
               <div class="friends__items--inner-1">
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/2.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/2.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/3.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/3.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
               </div>
@@ -637,17 +664,29 @@
               <div class="friends__items--inner-2">
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/4.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/4.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/5.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/5.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/6.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/6.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
               </div>
@@ -655,19 +694,31 @@
               <div class="friends__items--inner-1">
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/7.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/7.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
                 <div class="friends__item">
                   <a class="friends__link" href="#">
-                    <img class="friends__img" src="./images/main/friends/8.png" alt="logo">
+                    <img
+                      class="friends__img"
+                      src="./images/main/friends/8.png"
+                      alt="logo"
+                    />
                   </a>
                 </div>
               </div>
               <!-- /friends__items--inner-1 -->
               <div class="friends__item">
                 <a class="friends__link" href="#">
-                  <img class="friends__img" src="./images/main/friends/9.png" alt="logo">
+                  <img
+                    class="friends__img"
+                    src="./images/main/friends/9.png"
+                    alt="logo"
+                  />
                 </a>
               </div>
             </div>
@@ -678,6 +729,49 @@
         <!-- /container -->
       </section>
       <!-- /section.friends -->
+
+      <section class="reviews">
+        <div class="container">
+          <div class="reviews__inner">
+            <h2 class="reviews__title">
+              Зачем говорить о себе самому, когда это гораздо лучше могут
+              сделать <span>твои клиенты</span>
+            </h2>
+            <p class="reviews__subtitle">Отзывы</p>
+            <div class="reviews__items">
+              <div class="reviews__item reviews__item--1">
+                <a class="reviews__link" href="#">
+                  <img class="reviews__img" src="./images/main/reviews/1.png" alt="logo">
+                </a>
+              </div>
+              <div class="reviews__item reviews__item--2">
+                <a class="reviews__link" href="#">
+                  <img class="reviews__img" src="./images/main/reviews/2.svg" alt="logo">
+                </a>
+              </div>
+              <div class="reviews__item reviews__item--3">
+                <a class="reviews__link" href="#">
+                  <img class="reviews__img" src="./images/main/reviews/3.svg" alt="logo">
+                </a>
+              </div>
+              <div class="reviews__item reviews__item--4">
+                <a class="reviews__link" href="#">
+                  <img class="reviews__img" src="./images/main/reviews/4.svg" alt="logo">
+                </a>
+              </div>
+              <div class="reviews__item reviews__item--5">
+                <a class="reviews__link" href="#">
+                  <img class="reviews__img" src="./images/main/reviews/5.png" alt="logo">
+                </a>
+              </div>
+            </div>
+            <!-- /reviews__items -->
+          </div>
+          <!-- /reviews__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.reviews -->
     </main>
 
     <script src="js/main.min.js"></script>
