9. Made results section

--- a/app/index.html
+++ b/app/index.html
@@ -741,27 +741,47 @@
             <div class="reviews__items">
               <div class="reviews__item reviews__item--1">
                 <a class="reviews__link" href="#">
-                  <img class="reviews__img" src="./images/main/reviews/1.png" alt="logo">
+                  <img
+                    class="reviews__img"
+                    src="./images/main/reviews/1.png"
+                    alt="logo"
+                  />
                 </a>
               </div>
               <div class="reviews__item reviews__item--2">
                 <a class="reviews__link" href="#">
-                  <img class="reviews__img" src="./images/main/reviews/2.svg" alt="logo">
+                  <img
+                    class="reviews__img"
+                    src="./images/main/reviews/2.svg"
+                    alt="logo"
+                  />
                 </a>
               </div>
               <div class="reviews__item reviews__item--3">
                 <a class="reviews__link" href="#">
-                  <img class="reviews__img" src="./images/main/reviews/3.svg" alt="logo">
+                  <img
+                    class="reviews__img"
+                    src="./images/main/reviews/3.svg"
+                    alt="logo"
+                  />
                 </a>
               </div>
               <div class="reviews__item reviews__item--4">
                 <a class="reviews__link" href="#">
-                  <img class="reviews__img" src="./images/main/reviews/4.svg" alt="logo">
+                  <img
+                    class="reviews__img"
+                    src="./images/main/reviews/4.svg"
+                    alt="logo"
+                  />
                 </a>
               </div>
               <div class="reviews__item reviews__item--5">
                 <a class="reviews__link" href="#">
-                  <img class="reviews__img" src="./images/main/reviews/5.png" alt="logo">
+                  <img
+                    class="reviews__img"
+                    src="./images/main/reviews/5.png"
+                    alt="logo"
+                  />
                 </a>
               </div>
             </div>
@@ -772,6 +792,34 @@
         <!-- /container -->
       </section>
       <!-- /section.reviews -->
+
+      <section class="results">
+        <div class="container">
+          <div class="results__inner">
+            <div class="results__box">
+              <img class="results__boxbg" src="./images/main/results/bg.svg" alt="backround">
+              <h2 class="results__title">Наши результаты</h2>
+              <div class="results__item results__item--1"> 
+                <div class="results__rect"></div>
+                <p class="results__itemtext results__itemtext--1">В компании работает более <span>3 000</span> человек</p>
+              </div>
+              <div class="results__item results__item--2"> 
+                <div class="results__rect"></div>
+                <p class="results__itemtext results__itemtext--2"><span>849</span> компа ний</p>
+              </div>
+              <div class="results__item results__item--3"> 
+                <div class="results__rect"></div>
+                <p class="results__itemtext results__itemtext--3"><span>12</span> городов</p>
+              </div>
+            </div>
+            <!-- /results__box -->
+            <img class="results__img" src="./images/main/results/bro.png" alt="image">
+          </div>
+          <!-- /results__inner -->
+        </div>
+        <!-- /container -->
+      </section>
+      <!-- /section.results -->
     </main>
 
     <script src="js/main.min.js"></script>
